# RetroIkea

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: post.frag  post.vert  shader.frag  shader.vert  shader_staff.vert
cmake/: embed_all_assets.py
packaging/: windows_build_and_setup.txt  windows_setup.iss
src/: audio.cpp  audio.hpp  employee_mesh.cpp  employee_mesh.hpp  main.cpp  staff_skin.cpp  staff_skin.hpp
